--- a/js/main.scss
+++ b/js/main.scss
@@ -24,14 +24,48 @@ body{
 
 .mainSection{
   height: 710px;
-  background-color: red;
+  background-color: #C6BED1;
   display: flex;
 }
 
-.weatherInformation{
+.weatherInformationBox{
   height:710px;
   width: 25%;
   border: 1px solid black;
+}
+.weatherInformationHead{
+  font-family: 'Anton', sans-serif;
+  font-size: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+  height: 70px;
+}
+
+.weatherInformations{
+
+  height: 640px;
+  width: 100%;
+  p{
+    margin-bottom: 122px;
+    font-size: 24px;
+    text-align: center;
+  }
+}
+
+.weatherInfoBtn{
+  width: 50%;
+  height: 42px;
+  text-transform: uppercase;
+  font-size: 11px;
+  font-family: 'Lato', sans-serif;
+  border-radius: 5px;
+}
+.getInf{
+  background-color: #55acee;
+}
+.getCurrPos{
+  background-color: #2ecc71;
 }
 
 .mapPicture{
